--- a/blog.html
+++ b/blog.html
@@ -122,7 +122,7 @@
 
     <footer class="section-p1">
       <div class="coloumn">
-        <img class="logo" src="../img/logo.png" alt="logo" />
+        <img class="logo" src="logo.png" alt="logo" />
         <h4>Contact</h4>
         <p>
           <strong>Addres :</strong>562 Wellington Road, Street 32, San Francisco
@@ -162,14 +162,14 @@
         <h4>Instal App</h4>
         <p>From App Store or Google Play Store</p>
         <div class="row">
-          <img src="../img/pay/app.jpg" alt="logo" />
-          <img src="../img/pay/play.jpg" alt="logo" />
+          <img src="app.jpg" alt="logo" />
+          <img src="play.jpg" alt="logo" />
         </div>
         <p>Secured Payment Gateways</p>
-        <img src="../img/pay/pay.png" alt="logo" />
+        <img src="pay.png" alt="logo" />
       </div>
     </footer>
 
-    <script href="../Javascript Files/script.js"></script>
+    <script href="script.js"></script>
   </body>
 </html>
