--- a/cart.html
+++ b/cart.html
@@ -72,7 +72,7 @@
     <section id="cart-add" class="section-p1">
         <div id="coupan">
             <h3>Apply Coupan</h3>
-            <div>
+            <div class="Coupan-Container">
                 <input type="text" placeholder="Enter Your Coupan">
                 <button class="normal">Apply</button>
             </div>
