--- a/SingleProduct.html
+++ b/SingleProduct.html
@@ -1,199 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shop</title>
-    <link rel="stylesheet" href="../CSS Files/style.css">
-    <script src="https://kit.fontawesome.com/45e1fd53ef.js" crossorigin="anonymous"></script>
-</head>
-<body>
-
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/45e1fd53ef.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <section id="header">
-        <a href="index.html"><img src="../img/logo.png" class="logo" alt="logo"></a>
-        <div>
-            <ul id="navbar">
-                <li><a href="../HTML Files/index.html">Home</a></li>
-                <li><a class="active" href="../HTML Files/shop.html">Shop</a></li>
-                <li><a href="../HTML Files/blog.html">Blog</a></li>
-                <li><a href="../HTML Files/about.html">About</a></li>
-                <li><a href="../HTML Files/contact.html">Contact</a></li>
-                <li><a href="../HTML Files/cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>  
-            </ul>
-        </div>
+      <a href="index.html"><img src="logo.png" class="logo" alt="logo" /></a>
+      <div>
+        <ul id="navbar">
+          <li><a href="index.html">Home</a></li>
+          <li><a class="active" href="shop.html">Shop</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li>
+            <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <section id="product-details" class="section-p1">
+      <div class="Single-Product">
         <div class="single-product-img">
-            <img src="../img/products/f1.jpg" width="100%" id="main-img" alt="shirt">
-
-            <div class="small-img-group">
-
-                <div class="small-img-col">
-                    <img src="../img/products/f1.jpg" width="100%" class="small-img" alt="">
-                </div>
-                <div class="small-img-col">
-                    <img src="../img/products/f2.jpg" width="100%" class="small-img" alt="">
-                </div>
-                <div class="small-img-col">
-                    <img src="../img/products/f3.jpg" width="100%" class="small-img" alt="">
-                </div>
-                <div class="small-img-col">
-                    <img src="../img/products/f4.jpg" width="100%" class="small-img" alt="">
-                </div>
-
+          <div>
+            <img src="f1.jpg" width="100%" id="main-img" alt="shirt" />
+          </div>
+          <div class="small-img-group">
+            <div class="small-img-col">
+              <img src="f1.jpg" width="100%" class="small-img" alt="" />
             </div>
-
+            <div class="small-img-col">
+              <img src="f2.jpg" width="100%" class="small-img" alt="" />
+            </div>
+            <div class="small-img-col">
+              <img src="f3.jpg" width="100%" class="small-img" alt="" />
+            </div>
+            <div class="small-img-col">
+              <img src="f4.jpg" width="100%" class="small-img" alt="" />
+            </div>
+          </div>
         </div>
         <div class="single-product-details">
-            <h6>Home / T-shirts</h6>
-            <h4>Mens Fashion T-Shirt</h4>
-            <h2>$139.00</h2>
-            <select name="#" id="#">
-                <option value="#">Select size</option>
-                <option value="#">XXL</option>
-                <option value="#">XL</option>
-                <option value="#">X</option>
-                <option value="#">M</option>
-                <option value="#">s</option>
-            </select>
-            <input type="number" value="1">
-            <button class="normal">Add To Cart</button>
-            <h4>Product Details</h4>
-            <span>
-                The gildan ultra cotton T-shirt is made from a substaial 6.0 oz. per
-                sq. yd. Fabric constructed from 100% cotton, this classic fits preshrunk
-                jersey knit provides umatched comforts with each wear. Featuring a taped
-                neck and shoulder, and a seamless double-needle sollar, and available in a 
-                range of colors. It offers it all in the ultimate head-turning package. 
-            </span>
+          <h6>Home / T-shirts</h6>
+          <h4>Mens Fashion T-Shirt</h4>
+          <h2>$139.00</h2>
+          <select name="#" id="#">
+            <option value="#">Select size</option>
+            <option value="#">XXL</option>
+            <option value="#">XL</option>
+            <option value="#">X</option>
+            <option value="#">M</option>
+            <option value="#">s</option>
+          </select>
+          <input type="number" value="1" />
+          <button class="normal">Add To Cart</button>
+          <h4>Product Details</h4>
+          <span>
+            The gildan ultra cotton T-shirt is made from a substaial 6.0 oz. per
+            sq. yd. Fabric constructed from 100% cotton, this classic fits
+            preshrunk jersey knit provides umatched comforts with each wear.
+            Featuring a taped neck and shoulder, and a seamless double-needle
+            sollar, and available in a range of colors. It offers it all in the
+            ultimate head-turning package.
+          </span>
         </div>
+      </div>
     </section>
 
     <section id="product1" class="section-p1">
-        <h2>Featured Products</h2>
-        <p>Summer Collection New Mordern Design</p>
-        <div class="pro-container">
-            <div class="pro">
-                <img src="../img/products/n1.jpg" alt="cloth">
-                <div class="description">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-shirts</h5>
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+      <h2>Featured Products</h2>
+      <p>Summer Collection New Mordern Design</p>
+      <div class="pro-container">
+        <div class="pro">
+          <img src="n1.jpg" alt="cloth" />
+          <div class="description">
+            <span>adidas</span>
+            <h5>Cartoon Astronaut T-shirts</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
             </div>
-            <div class="pro">
-                <img src="../img/products/n2.jpg" alt="cloth">
-                <div class="description">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-shirts</h5>
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
-            <div class="pro">
-                <img src="../img/products/n3.jpg" alt="cloth">
-                <div class="description">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-shirts</h5>
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
-            <div class="pro">
-                <img src="../img/products/n4.jpg" alt="cloth">
-                <div class="description">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-shirts</h5>
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-            </div>
+            <h4>$78</h4>
+          </div>
+          <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
+        <div class="pro">
+          <img src="n2.jpg" alt="cloth" />
+          <div class="description">
+            <span>adidas</span>
+            <h5>Cartoon Astronaut T-shirts</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+        </div>
+        <div class="pro">
+          <img src="n3.jpg" alt="cloth" />
+          <div class="description">
+            <span>adidas</span>
+            <h5>Cartoon Astronaut T-shirts</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+        </div>
+        <div class="pro">
+          <img src="n4.jpg" alt="cloth" />
+          <div class="description">
+            <span>adidas</span>
+            <h5>Cartoon Astronaut T-shirts</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+        </div>
+      </div>
     </section>
 
     <section id="newsletter" class="section-p1 section-m1">
-        <div class="newstext">
-            <h4>Sign Up for Newsletters</h4>
-            <p>Get E-mail updates about our latest shop and <span>special offers.</span></p>
-        </div>
-        <div class="form">
-            <input type="text" placeholder="Your email addres">
-            <button class="normal">Sign up</button>
-        </div>
+      <div class="newstext">
+        <h4>Sign Up for Newsletters</h4>
+        <p>
+          Get E-mail updates about our latest shop and
+          <span>special offers.</span>
+        </p>
+      </div>
+      <div class="form">
+        <input type="text" placeholder="Your email addres" />
+        <button class="normal">Sign up</button>
+      </div>
     </section>
 
     <footer class="section-p1">
-        <div class="coloumn">
-            <img class="logo" src="../img/logo.png" alt="logo">
-            <h4>Contact</h4>
-            <p><strong>Addres :</strong>562 Wellington Road, Street 32, San Francisco</p>
-            <p><strong>Phone :</strong>+01 2222 356/ (+91) 01 2345 6789</p>
-            <p><strong>Hours</strong> 10:00 - 18:00 , Mon-Sat</p>
-            <div class="follow">
-                <h4>Follow us</h4>
-                <div class="icons">
-                    <i class="fab fa-facebook"></i>
-                    <i class="fab fa-twitter"></i>
-                    <i class="fab fa-instagram"></i>
-                    <i class="fab fa-pinterest-p"></i>
-                    <i class="fab fa-youtube"></i>
-                </div>
-                <p id="copyright">Copyright © 2014-2023 CARA INC All Rights Reserved </p>
-            </div>
+      <div class="coloumn">
+        <img class="logo" src="logo.png" alt="logo" />
+        <h4>Contact</h4>
+        <p>
+          <strong>Addres :</strong>562 Wellington Road, Street 32, San Francisco
+        </p>
+        <p><strong>Phone :</strong>+01 2222 356/ (+91) 01 2345 6789</p>
+        <p><strong>Hours</strong> 10:00 - 18:00 , Mon-Sat</p>
+        <div class="follow">
+          <h4>Follow us</h4>
+          <div class="icons">
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-pinterest-p"></i>
+            <i class="fab fa-youtube"></i>
+          </div>
+          <p id="copyright">
+            Copyright © 2014-2023 CARA INC All Rights Reserved
+          </p>
         </div>
-        <div class="coloumn">
-            <h4>About</h4>
-            <a href="#">About us</a>
-            <a href="#">Privacy policy</a>
-            <a href="#">Contact us</a>
-            <a href="#">Terms & conditions</a>
+      </div>
+      <div class="coloumn">
+        <h4>About</h4>
+        <a href="#">About us</a>
+        <a href="#">Privacy policy</a>
+        <a href="#">Contact us</a>
+        <a href="#">Terms & conditions</a>
+      </div>
+      <div class="coloumn">
+        <h4>My Account</h4>
+        <a href="#">Sign In</a>
+        <a href="#">View Cart</a>
+        <a href="#">My Wishlist</a>
+        <a href="#">Track My Orders</a>
+        <a href="#">Help</a>
+      </div>
+      <div class="coloumn install">
+        <h4>Instal App</h4>
+        <p>From App Store or Google Play Store</p>
+        <div class="row">
+          <img src="app.jpg" alt="logo" />
+          <img src="play.jpg" alt="logo" />
         </div>
-        <div class="coloumn">
-            <h4>My Account</h4>
-            <a href="#">Sign In</a>
-            <a href="#">View Cart</a>
-            <a href="#">My Wishlist</a>
-            <a href="#">Track My Orders</a>
-            <a href="#">Help</a>
-        </div>
-        <div class="coloumn install">
-            <h4>Instal App</h4>
-            <p>From App Store or Google Play Store</p>
-            <div class="row">
-                <img src="../img/pay/app.jpg" alt="logo">
-                <img src="../img/pay/play.jpg" alt="logo">
-            </div>
-            <p>Secured Payment Gateways</p>
-            <img src="../img/pay/pay.png" alt="logo">
-        </div>
+        <p>Secured Payment Gateways</p>
+        <img src="pay.png" alt="logo" />
+      </div>
     </footer>
-
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
