--- a/about.html
+++ b/about.html
@@ -71,29 +71,31 @@
     </section>
 
     <section id="features" class="section-p1">
-      <div class="fe-box">
-        <img src="f1.png" alt="free shipping" />
-        <h6>Free shipping</h6>
-      </div>
-      <div class="fe-box">
-        <img src="f2.png" alt="Online Order" />
-        <h6>Online Order</h6>
-      </div>
-      <div class="fe-box">
-        <img src="f3.png" alt="Save Money" />
-        <h6>Save Money</h6>
-      </div>
-      <div class="fe-box promotion-box">
-        <img src="f4.png" alt="Promotions" />
-        <h6>Promotions</h6>
-      </div>
-      <div class="fe-box">
-        <img src="f5.png" alt="Happy Sell" />
-        <h6>Happy Sell</h6>
-      </div>
-      <div class="fe-box row2">
-        <img src="f6.png" alt="24/7 Support" />
-        <h6>Support</h6>
+      <div class="fe-box-container">
+        <div class="fe-box">
+          <img src="f1.png" alt="free shipping" />
+          <h6>Free shipping</h6>
+        </div>
+        <div class="fe-box">
+          <img src="f2.png" alt="Online Order" />
+          <h6>Online Order</h6>
+        </div>
+        <div class="fe-box">
+          <img src="f3.png" alt="Save Money" />
+          <h6>Save Money</h6>
+        </div>
+        <div class="fe-box promotion-box">
+          <img src="f4.png" alt="Promotions" />
+          <h6>Promotions</h6>
+        </div>
+        <div class="fe-box">
+          <img src="f5.png" alt="Happy Sell" />
+          <h6>Happy Sell</h6>
+        </div>
+        <div class="fe-box row2">
+          <img src="f6.png" alt="24/7 Support" />
+          <h6>Support</h6>
+        </div>
       </div>
     </section>
 
